--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
-<html lang="tr">
-    <head>
-        <meta charset="UTF-8">
-        <title>Benim İlk Web Sayfam</title>
-    </head>
-    <body>
-        <h1>Merhaba Dünya!</h1>
-    </body>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    
+    <h1>
+        Ana Sayfa
+    </h1>
+    <a href="../deneme-sayfası/index.html">
+        Deneme Sayfasına Git
+    </a>
+    <p>
+        <strong> Lorem </strong> <em> ipsum, dolor sit amet consectetur adipisicing elit. </em> Asperiores consequatur
+        accusantium repudiandae fugit, laboriosam pariatur consequuntur nulla voluptatem at beatae provident aliquam
+        maxime repellat laborum temporibus voluptatum voluptatibus numquam optio.
+    </p>
+    <p>
+        <strong>Lorem</strong> <em> ipsum dolor sit amet consectetur adipisicing elit. </em> Esse tempore est molestias
+        voluptatibus et id! Omnis odio expedita voluptate ex eum ducimus praesentium. Perspiciatis id quasi, ut sit
+        perferendis esse?
+    </p>
+    <h3>
+        TOP 5 YEMEKLER
+    </h3>
+    <ul>
+        <li>et</li>
+        <li>hamburger</li>
+        <li>balık</li>
+        <li>tavuk</li>
+        <li>patates</li>
+    </ul>
+    <h3>
+        YAPILACAKLAR
+    </h3>
+    <ol>
+        <li>Yusuf dövmek</li>
+        <li>Adem kırmak</li>
+        <li>Emrah sikmek</li>
+        <li>Mustafa teşeküretmek</li>
+        <li>Berdan idam etmek</li>
+    </ol>
+<img src="../tommy.jpg" alt="EN BÜYÜK BARON" > 
+</body>
+
 </html>
